[tool.poetry]
name = "tanbih-pipeline"
version = "0.11.9"
description = "data streaming on top of popular message queues"
authors = ["Yifan Zhang <freqyifan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
prometheus-client = "0.7.*"
zstandard = "0.15.*"
pydantic = "1.8.*"
redis = {version = "^3.5.3", extras = ["redis", "full"]}
confluent-kafka = {version = "1.3.*", extras = ["kafka", "full"]}
pulsar-client = {version = "2.5.*", extras = ["pulsar", "full"]}

[tool.poetry.dev-dependencies]
tox = "^3.23.1"
tox-pyenv = "^1.1.0"
pre-commit = "^2.13.0"
Sphinx = "^4.0.2"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
mypy = "^0.901"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
ignore = "E203, E266, E501, W503, F403, F401"
max-line-length = 88
max-complexity = 18
select = "B,C,E,F,W,T4,B9"

[tool.pytest.ini_options]
python_files = "*.py"
addopts = "--color=yes -p no:warnings --doctest-modules --ignore=compose --ignore=./upload.py --ignore=./setup.py --ignore=integration-tests --doctest-glob *.rst"
doctest_optionflags= "NORMALIZE_WHITESPACE ELLIPSIS"
